syntax="proto3";
package grpcbus;

// Wrapper for a message from client
message GBClientMessage {
  // Service management
  GBCreateService service_create = 1;
  GBReleaseService service_release = 2;

  // Call management
  GBCreateCall call_create = 3;
  GBCancelCall call_cancel = 4;
  GBSendCall   call_send   = 5;
}

message GBServerMessage {
  // service management responses
  GBCreateServiceResult service_create = 1;
  GBReleaseServiceResult service_release = 2;

  // Call management
  GBCreateCallResult call_create = 3;
  GBCallReceive     call_receive = 5;
  GBCallResult       call_result = 4;
}

// Information about a service
message GBServiceInfo {
  // Endpoint
  string endpoint = 1;
  // Fully qualified service identifier
  string service_id = 2;
  // TODO: figure out how to serialize credentials
}

// Initialize a new Service.
message GBCreateService {
  // ID of the service, client-generated, unique.
  int32 service_id = 1;
  GBServiceInfo service_info = 2;
}

// Release an existing / pending Service.
message GBReleaseService {
  int32 service_id = 1;
}

// Create a call
message GBCreateCall {
  int32 service_id = 1;
  // Unique call ID, client-generated, unique
  int32 call_id = 2;
  // Method identifier
  string method_id = 3;
}

// Cancel/abort the call
message GBCancelCall {
  int32 call_id = 1;
}

// Send a message on a streaming call
message GBSendCall {
  int32 call_id = 1;
  // TODO: body
}

// Result of attempting to create a service
message GBCreateServiceResult {
  // ID of service, client-generated, unique
  int32 service_id = 1;
  // Result
  ECreateServiceResult result = 2;
  // Error details
  string error_details = 3;

  enum ECreateServiceResult {
    // Success
    SUCCESS = 0;
    // Invalid service ID, retry with a new one.
    INVALID_ID = 1;
    // GRPC internal error constructing the service.
    GRPC_ERROR = 2;
  }
}

// When the server releases a service
message GBReleaseServiceResult {
  int32 service_id = 1;
}

// Result of creating a call.
// This is sent immediately after starting call.
message GBCreateCallResult {
  int32 call_id = 1;

  // Result
  ECreateCallResult result = 2;

  enum ECreateCallResult {
    // Success
    SUCCESS = 0;
    // Invalid call ID, retry with a new one.
    INVALID_ID = 1;
    // GRPC internal error initializing the call
    GRPC_ERROR = 2;
  }
}

// Received message during streaming call.
message GBCallReceive {
  int32 call_id = 1;
  // TODO: body
}

// Terminate a call with a result.
message GBCallResult {
  int32 call_id = 1;
  // TODO: body, error
}
