syntax = "proto3";
package mock;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloClientStream(stream HelloRequest) returns (HelloReply) {}
  rpc SayHelloServerStream(HelloRequest) returns (stream HelloReply) {}
  rpc SayHelloBidiStream(stream HelloRequest) returns (stream HelloReply) {}
}

enum EDummyEnum {
  DUMMY = 0;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
